# dashrunner

./: README.md  pyproject.toml
src/dashrunner/: __init__.py  dashrunner.py
test/: test_runAppWithFigure.py  test_show_plotly_fig_layout.py  test_show_plotly_fig_matplotlibTrue.py
