[project]
name = "dashrunner"
version = "0.0.0"
description = "A module to run Dash apps as local apps"
readme = "README.md"
authors = [
    { name = "Diogo Rossi", email = "rossi.diogo@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "dash>=3.3.0",
    "pywebview>=6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = [
    "numpy>=2.2.6",
]
